<resources>
    <string name="app_name">AwesomeResume</string>
    <string name="section_education">Education</string>
    <string name="education_edit_school_hint">School</string>
    <string name="education_edit_major_hint">Major</string>
    <string name="start_date">Start date(MM/YYYY)</string>
    <string name="end_date">End date(MM/YYYY)</string>
    <string name="education_edit_courses_hint">Courses</string>
    <string name="save">save</string>
    <string name="project_edit_name">Project Name</string>
    <string name="project_content">Project content</string>
    <string name="section_project">Project</string>
    <string name="section_work">Working Experience</string>
    <string name="work_edit_place_hint">Work place</string>
    <string name="work_edit_title_hint">Work title</string>
    <string name="work_edit_contents_hint">Work contents</string>
    <string name="action_delete">Delete</string>
    <string name="choose_user_picture">User picture</string>
    <string name="basic_info_edit_name_hint">Name</string>
    <string name="basic_info_edit_email_hint">Email</string>
    <string name="user_picture">User picture</string>

</resources>
