<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing_medium"
        tools:context="com.example.peter.awesomeresume.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/user_name_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/user_picture"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/caption_text_size"
                    tools:text="Your name" />

                <ImageButton
                    android:id="@+id/edit_basic_info"
                    android:layout_width="@dimen/icon_button_size"
                    android:layout_height="@dimen/icon_button_size"
                    android:layout_marginLeft="@dimen/spacing_xsmall"
                    android:src="@drawable/ic_mode_edit_black_18px"
                    android:background="?attr/selectableItemBackground" />

            </LinearLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/user_name_layout"
                android:layout_toLeftOf="@+id/user_picture"
                tools:text="Your email" />

            <ImageView
                android:id="@+id/user_picture"
                android:layout_width="@dimen/user_picture_size"
                android:layout_height="@dimen/user_picture_size"
                android:layout_alignParentRight="true"
                android:src="@drawable/user_ghost"
                android:contentDescription="@string/user_picture"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_education"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textSize="24sp"/>

            <ImageButton
                android:id="@+id/add_education_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Add education"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/educations_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/section_project"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textSize="24sp"/>
                />

            <ImageButton
                android:id="@+id/add_project_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Add project"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/projects_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/section_work"
                android:layout_weight="1"
                android:textAllCaps="true"
                android:textSize="24sp"/>

            <ImageButton
                android:id="@+id/add_working_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add_black_18dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="Add work"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="4dp"
            android:id="@+id/works_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>


    </LinearLayout>

</ScrollView>

